Archer/slinger/Jav same run/walk speed?

26.12
Slingers cost changed to 30 wood 20 stone, pierce dmg drop to 11.5 (from 12)
pikeman attack speed increased from 2 seconds to 1.75
what would happen if spear range increased to 4.5 (reduce sword to 2.5 or keep at 3) keeping at 3 for now but increasing spear to 4.5 
Spartan teambonus 2 Infantry +.5 pierce/hack armor, +1 crush.


26.11
Spartans
Spartan rams garrison increased to 15 (rams were first siege engines recorded  (in Assyria) soon to be adopted by sparta) Cost 400 wood no metal, crush dmg reduced by 30% build time 25 instead of 30
Spartan "merc javs" start out with regular jav stats p1 but + 1 pierce and hack resistance, train time reduced to 10 seconds plus rank penalty.  Now can only train from CC, Market in p2
advanced melee dmg bonus increased to 1.15 from 1.10
range added to 1.05 and 2 range
Sparta common javs can no longer promote to merc jav.  Also when training from house cost 50 food instead of 40.  "fertility" for common jav increased 100 food and wood (400/400) but train time reduced moved back to 9 from cc and 25 from hourses
Women train 25 second from houses as well but cost 55 food instead of 50
Spartiates starting dmg decreased from 9.5/8.5 to 9/8.5 and removed the .5 hack/pierce armor they had compared to regular champion spear infantry.  Training time reduced to 16, 1 second more than other civ champ spear. Reduced cost to 80/75/70 (vs 80/60/80 for other spear champs)
added a new tech to ssytion spearman 10% dmg 250F 150W 100S
Ssytion ONLY trains spearman now, champs, neomades and regular A/E ranks.
Neomades start same stats as advance rank speaerman increased cost 40/25/25
Skiri speed increased to 12 from 11.5 pierce/hack resistance dexreased .5 each
Spartan spear heros dmg reduced, 12/10.5 (.5 more pierce than other civ spear hero) down from 13/12
new p1 spear tech for sparta from ssystion 200 food 100 wood 50 stone 15 seconds research time, Infantry spearman 5% more dmg 