@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Entity parent="template_structure_defensive_palisade">
   <Cost>
-    <BuildTime>18</BuildTime>
+    <BuildTime>15</BuildTime>
     <Resources>
       <wood>50</wood>
     </Resources>
