@@ -25,8 +25,8 @@
     <MaxGatherers>8</MaxGatherers>
     <Change>
       <Regrowth>
-        <Value>1</Value>
-        <Interval>6000</Interval>
+        <Value>1.5</Value>
+        <Interval>3000</Interval>
       </Regrowth>
     </Change>
   </ResourceSupply>
